Upgrade to jdk 21
a